--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,60 +7,64 @@
   <title>PET SIT CITY</title>
   <link rel="stylesheet" href="/css/jass.css">
   <link rel="stylesheet" href="/css/style.css">
- <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
-<script src="https://kit.fontawesome.com/357c939040.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+  <script src="https://kit.fontawesome.com/357c939040.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-  <div class="flex-column justify-space-around">
-    <header class="display-flex justify-space-between align-center p-2">
-      <h1>
- <!--added out logo icon from faunt awsome -->       
-       <i class="fas fa-paw">Pet Sit City</i>
-      </h1>
-        <nav>
-        <!-- Conditionally render login or logout links -->
-        {{#if logged_in}}
-        <a href="/profile">profile</a> |
-        <button class="no-button" id="logout">logout</button>
-        {{else}}
-        <a href="/login">login</a>
-        {{/if}}
-      </nav>
-    </header>
 
-
-<main class="container container-fluid mt-5">
-    
-<div class="col s12 m7">
-    <h2 class="header">Pet Sit City</h2>
-    <div class="card horizontal">
-      <div class="card-image">
-        <img src="https://images.app.goo.gl/EQXNTEfMrQ6EB8eq7">
-      </div>
-      <div class="card-stacked">
-        <div class="card-content">
-          <p>Sign up or Sign in </p>
-        </div>
-        <div class="card-action">
-          <a href="#">sign up</a>
-        </div>
-        <div class="card-action">
-          <a href="#">Log in</a>
-        </div>
-      </div>
+  <div class="navbar-fixed"></div>
+  <nav>
+    <div class="nav-wrapper">
+      <a href="#" class="brand-logo right">Pet Sit City</a>
+      <ul id="nav-mobile" class="left hide-on-med-and-down">
+        <li>{{#if logged_in}}
+          <a href="/profile">profile</a> |
+          <button class="no-button" id="logout">Logout</button>
+          {{else}}
+          <a href="/login">Login</a>
+          {{/if}}
+        </li>
+        <li><a href="badges.html">Placeholder 1</a></li>
+        <li><a href="collapsible.html">Placeholder 2</a></li>
+      </ul>
     </div>
+  </nav>
   </div>
 
-      {{{ body }}}
-    </main>
-    <footer>
-      
-    </footer>
+
+
+  <main class="container container-fluid mt-5">
+    
+      <div class="col s12 m7">
+        <h2 class="header">Pet Sit City</h2>
+        <div class="card horizontal">
+          <div class="card-image">
+            <img src="../../public/img/samples/sample-main.jpg">
+          </div>
+          <div class="card-stacked">
+            <div class="card-content">
+              <p>Sign up or Sign in </p>
+            </div>
+            <div class="card-action">
+              <a href="#">sign up</a>
+            </div>
+            <div class="card-action">
+              <a href="#">Log in</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    {{{body}}}
+  </main>
+
+  <footer>
+
+  </footer>
   </div>
 
   <!-- Render script for logged in users only -->
- {{#if logged_in}}
+  {{#if logged_in}}
   <script src="../../public/js/logout.js"></script>
   {{/if}}
 </body>
