--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,15 +5,19 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>PET SIT CITY</title>
-  <link rel="stylesheet" href="/css/jass.css">
-  <link rel="stylesheet" href="/css/style.css">
+  
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   <script src="https://kit.fontawesome.com/357c939040.js" crossorigin="anonymous"></script>
+    <!-- Compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+
+    {{!-- <link rel="stylesheet" href="css/jass.css"> --}}
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
 
-  <div class="navbar-fixed"></div>
+  <div class="navbar-fixed">
   <nav>
     <div class="nav-wrapper">
       <a href="#" class="brand-logo right">Pet Sit City</a>
@@ -26,7 +30,7 @@
           {{/if}}
         </li>
         <li><a href="badges.html">Placeholder 1</a></li>
-        <li><a href="collapsible.html">Placeholder 2</a></li>
+        <li><a href="collapsible.html">Placdsfdseholder 2</a></li>
       </ul>
     </div>
   </nav>
@@ -34,9 +38,9 @@
 
 
 
-  <main class="container container-fluid mt-5">
+  <main class="container mt-5">
     
-      <div class="col s12 m7">
+      {{!-- <div class="col s12 m7">
         <h2 class="header">Pet Sit City</h2>
         <div class="card horizontal">
           <div class="card-image">
@@ -54,7 +58,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> --}}
     {{{body}}}
   </main>
 
