--- a/views/sitters.handlebars
+++ b/views/sitters.handlebars
@@ -1,4 +1,5 @@
 
+  {{#each Pet_sitter}}
   <div class="col s4 m3">
    
     <div class="card horizontal">
@@ -6,12 +7,16 @@
         <img src="../public/img/samples/sample-2.jpg">
       </div>
       <div class="card-stacked">
-        <div class="card-content">
-          <p>I am a very simple card. I am good at containing small bits of information.</p>
+        <div class="card-content">          
+          <p>Hello!! My name is {{sitter_first_name}} {{sitter_last_name}}. I'm available in zip code {{zipcode_id}}.</p>
         </div>
         <div class="card-action">
-          <a href="#">This is a link</a>
+          <a href="#">This is a link to my full profile.</a>
         </div>
       </div>
     </div>
   </div>
+
+  {{/each}}
+</ul>
+  
