tweaked nav bar

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -29,8 +29,8 @@
           <a href="/login">Login</a>
           {{/if}}
         </li>
-        <li><a href="badges.html">Placeholder 1</a></li>
-        <li><a href="collapsible.html">Placdsfdseholder 2</a></li>
+        <li><a href="/registerSitter">Become a Pet Sitter</a></li>
+        <li><a href="/profile">Profile</a></li>
       </ul>
     </div>
   </nav>
