--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -60,7 +60,7 @@
     </form>
   </div>
 
-  {{#if projects.length}}
+  {{#if pr.length}}
   <div class="col-md-6 project-list">
     <h3>Current User:</h3>
 
