--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,78 +1,145 @@
 <!-- search handle bars-->
-<div class="row">
-  <div class="col-auto">
-    <h2>Welcome, {{name}}!</h2>
-  </div>
-</div>
+<div class="col s12" id="petSitterForm" >
+        
+    <div class="row">
 
-<div class="row mt-4">
-  <div class="col-md-6">
-    <h3>Create a User:</h3>
+        <div class="col s6 m6 m6 center-align border">
+            <img class="border1" src="../{{picture}}" alt="profile picture">
+        </div>
 
-    <form class="form new-user-form">
-      <div class="form-group">
-        <label for="sitter_first_name">First Name:</label>
-        <input class="form-input" type="text" id="sitter_first_name" name="sitter_first_name" />
-      </div>
-
-      <div class="form-group">
-        <label for="sitter_last_name">Last Name:</label>
-        <input class="form-input" type="text" id="sitter_last_name" name="sitter_last_name" />
-      </div>
-      
-      <div class="form-group">
-        <label for="email">Email:</label>
-        <input class="form-input" type="text" id="email" email="email" />
-      </div>
-      
-      <div class="form-group">
-        <label for="address"> Address>:</label>
-        <input class="form-input" type="text" id="address" name="na" />
-      </div>
-
-      <div class="form-group">
-        <label for="zipcode_id">ZIP Code:</label>
-        <input class="form-input" type="number" id="zipcode_id" name="zipcode_id" />
-      </div>
-
-      <div class="form-group">
-        <label for="phone">Phone Number:</label>
-        <input class="form-input" type="tel" id="phone" name="phone" />
-      </div>
-
-      <div class="form-group">
-        <label for="mobile">Mobile:</label>
-        <input class="form-input" type="text" id="mobile" name="mobile" />
-      </div>
-
- <!--BIO-->    
-      <div class="form-group">
-        <label for="aboutTitle">Pet Sitter Tag Line (About Title):</label>
-        <textarea class="aboutTitle" id="aboutTitle" name="aboutTitle"></textarea>
-        <textarea class="aboutText" id="aboutText" name="aboutText"></textarea>
-      </div>
-
-
-<!--the create button -->      
-      <div class="form-group">
-        <button type="submit" class="btn btn-primary">Create</button>
-      </div>
-    </form>
-  </div>
-
-  {{#if pr.length}}
-  <div class="col-md-6 project-list">
-    <h3>Current User:</h3>
-
-    {{#each projects as |project|}}
-    <div class="row mb-2">
-      <div class="col-md-8">
-        <h4><a href="/project/{{project.id}}">{{project.name}}</a></h4>
-      </div>
+        <div class="col s6 m6 m6 border">
+        
+            <div class="row border">
+            <div class="col s12">
+            <h2>{{sitter_first_name}} {{sitter_last_name}}</h2>    
+            {{email}}
+            {{address}}
+          
+            <div class="row border">
+            <div class="col s12">
+            <input placeholder="E-Mail" id="email" type="text" class="validate">
+            {{!-- <label for="last_name">Last Name</label> --}}
+            </div>
+            </div> 
+            </div>
     </div>
-    {{/each}}
-  </div>
-  {{/if}}
+    
+        <div class="row border">
+            <div class="col s6 m6 m6 center-align border">
+
+                <div class="row">
+                <div class="input-field col s12">
+                <input placeholder="Address Line 1" id="addressLine1" type="text" class="validate">
+                {{!-- <label for="last_name">Last Name</label> --}}
+                </div>
+                </div> 
+
+                <div class="row">
+                <div class="input-field col s12">
+                <input placeholder="Address Line 2" id="addressLine2" type="text" class="validate">
+                {{!-- <label for="last_name">Last Name</label> --}}
+                </div>
+                </div> 
+
+                <div class="row">
+                <div class="input-field col s12">
+                <input placeholder="City" id="city" type="text" class="validate">
+                {{!-- <label for="last_name">Last Name</label> --}}
+                </div>
+                </div> 
+
+                <div class="row">
+                <div class="input-field col s12">
+                <input placeholder="Zip Code" id="zipcode" type="text" class="validate">
+                {{!-- <label for="last_name">Last Name</label> --}}
+                </div>
+                </div> 
+
+            </div>
+            <div class="col s6 m6 m6 center-align border">
+               
+            
+            </div>
+        </div>
+
+    <div class="row border">
+            <div class="col s6 m6 m6 center-align border">
+
+                <div class="row">
+                <div class="input-field col s12">
+                <input placeholder="Mobile Phone" id="mobile" type="text" class="validate">
+                {{!-- <label for="last_name">Last Name</label> --}}
+                </div>
+                </div> 
+
+            </div>
+        </div>
+
+           <div class="row border">
+            <div class="col s12 m12 m12 center-align border">
+
+                <div class="row">
+                <div class="input-field col s12">
+                <input placeholder="Your Tag Line" id="aboutTitle" type="text" class="validate">
+                {{!-- <label for="last_name">Last Name</label> --}}
+                </div>
+                </div> 
+                <div class="row">
+                <div class="input-field col s12">
+                    <textarea class="materialize-textarea" style="height: 200px;" placeholder="Pet Sitter Description" rows="55" cols="50" name="comment" id="aboutText" form="petSitterForm"  wrap="hard"></textarea>
+                {{!-- <input placeholder="Pet Sitter Description" id="addressLine1" type="text" class="validate"> --}}
+                {{!-- <label for="last_name">Last Name</label> --}}
+                </div>
+                </div> 
+
+            </div>
+        </div>
+
+            <div class="row border">
+            <div class="col s6 m6 m6 border">
+                SERVICES 
+                {{#if services.length}}
+                <div class="col-md-6 project-list">
+                <h3>Services:</h3>
+
+                    {{#each services as |service|}}
+
+                        <p>
+                            <label>
+                            <input class="service-box" type="checkbox" class="filled-in"/>
+                            <span>{{service.service_name}}</span>
+                            </label>
+                        </p>
+
+
+                    {{/each}}
+                </div>
+                {{/if}}
+
+            </div>
+             <div class="col s12 m12 m12 border">
+                Skills 
+                {{#if skills.length}}
+                <div class="col-md-6 project-list">
+                <h3>Skills:</h3>
+
+                    {{#each skills as |skill|}}
+
+                        <p>
+                            <label>
+                            <input type="checkbox" class="filled-in" />
+                            <span>{{skill.skill_name}}</span>
+                            </label>
+                        </p>
+
+
+                    {{/each}}
+                </div>
+                {{/if}}
+
+            </div>
+            
+        </div>
 </div>
 
-<script src="../public/js/profile.js"></script>
+<script src="./js/pet_sitter.js"></script>
