--- a/views/registerSitter.handlebars
+++ b/views/registerSitter.handlebars
@@ -50,7 +50,7 @@
 
                 <div class="row">
                 <div class="input-field col s12">
-                <input placeholder="City" id="City" type="text" class="validate">
+                <input placeholder="City" id="city" type="text" class="validate">
                 {{!-- <label for="last_name">Last Name</label> --}}
                 </div>
                 </div> 
@@ -75,7 +75,7 @@
 
                 <div class="row">
                 <div class="input-field col s12">
-                <input placeholder="Mobile Phone" id="addressLine1" type="text" class="validate">
+                <input placeholder="Mobile Phone" id="mobile" type="text" class="validate">
                 {{!-- <label for="last_name">Last Name</label> --}}
                 </div>
                 </div> 
@@ -114,7 +114,7 @@
 
                         <p>
                             <label>
-                            <input type="checkbox" class="filled-in" checked="checked" />
+                            <input class="service-box" type="checkbox" class="filled-in"/>
                             <span>{{service.service_name}}</span>
                             </label>
                         </p>
@@ -129,14 +129,14 @@
                 Skills 
                 {{#if skills.length}}
                 <div class="col-md-6 project-list">
-                <h3>Services:</h3>
+                <h3>Skills:</h3>
 
                     {{#each skills as |skill|}}
 
                         <p>
                             <label>
-                            <input type="checkbox" class="filled-in" checked="checked" />
-                            <span>{{skills.skill_name}}</span>
+                            <input type="checkbox" class="filled-in" />
+                            <span>{{skill.skill_name}}</span>
                             </label>
                         </p>
 
@@ -149,14 +149,12 @@
             
         </div>
 
-
-
-
-
-
+      <div class="form-group">
+        <button type="submit" class="btn btn-primary">Create</button>
+      </div>
 </form>
 
-
+<script src="./js/pet_sitter.js"></script>
  {{!-- <div class="row mb-2">
                         <div class="col-md-8">
                         <h4><a href="/project/{{service.id}}">{{service.service_name}}</a></h4>
